Fixed whitespace issue to the right of header image.
Modified body margins and padding to be 0. Removed unnecessary CSS comments. Lined up Share and Save buttons.

--- a/client/src/stylesheets/Header.css
+++ b/client/src/stylesheets/Header.css
@@ -1,43 +1,18 @@
-/* :local(.cover){
-  vertical-align: middle;
-  margin:-10px;
-  padding:0;
-  position: relative !important;
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
-  background-position: 100% 100% !important;
-  max-height: 370px;
-  width: 101%;
-  object-fit: cover;
-}
-
-/* :local(.dimmer) {
-  background-color: rgba(0,0,0,0.6);
-  border-radius: 20px;
-  padding: 10px;
-} */
-
-
-/* Make the image responsive */
-
 :local(.container .cover) {
-  vertical-align: middle;
-  margin:-10px;
-  padding:0;
   position: relative !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
   background-position: 100% 100% !important;
   max-height: 370px;
-  width: 101%;
+  width: 100%;
   object-fit: cover;
   cursor: pointer;
 }
 
 :local(.container .pbtn) {
   position: relative;
-  margin-left: 65px;
-  bottom: 25px;
+  margin-left: 75px;
+  bottom: 45px;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background:rgba(255,255,255);
@@ -46,30 +21,30 @@
   padding: 10px 18px;
   border-radius: 5px;
   cursor: pointer;
+  font-weight: 500;
 }
 
 :local(.container .sbtn) {
   float: right;
   position: relative;
   margin-right: 20px;
-  bottom: 330px;
-  /* transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%); */
+  bottom: 350px;
   background:rgba(255,255,255);
   color:#484848;
   font-size: 13px;
   padding: 9px 18px;
   border-radius: 5px;
   cursor: pointer;
+  font-weight: 500;
 }
 
 :local(.container .shareicon) {
-    height: auto; 
-    width: auto; 
-    max-width: 15px; 
-    max-height: 15px;
-    position: relative;
-    top: 1px;
+  height: auto; 
+  width: auto; 
+  max-width: 15px; 
+  max-height: 15px;
+  position: relative;
+  top: 1px;
 }
 
 :local(.container .saveicon) {
@@ -78,10 +53,5 @@
   max-width: 15px; 
   max-height: 15px;
   position: relative;
-  top: 3px;
+  top: 2px;
 }
-
-/* 
-:local(.container ul) {
-  width: 149px;
-} */
